--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
       <div class="gr">
         <div><img src="1.png"></div>
         <div id="g">Proper Designing</div>
-        <div><img src="2.png"></div>
+        <div><img src="2.PNG"></div>
         <div id="g">Planning out the works</div>
-        <div><img src="3.png"></div>
+        <div><img src="3.PNG"></div>
         <div id="g">Prize winning designers</div>
-        <div><img src="4.png"></div>
+        <div><img src="4.PNG"></div>
         <div id="g">Special service for gaming</div>
-        <div><img src="5.png"></div>
+        <div><img src="5.PNG"></div>
         <div id="g">Proper video service</div>
-        <div><img src="6.png"></div>
+        <div><img src="6.PNG"></div>
         <div id="g">Best possible way of execution</div>  
       </div>
      </div>
